--- a/index.html
+++ b/index.html
@@ -1,302 +1,262 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <title>Blokz Reflex</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', sans-serif;
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Blokz Reflex - Pro</title>
+<style>
+  /* Base */
+  body, html {
+    margin: 0; padding: 0; height: 100%;
+    font-family: Arial, sans-serif;
+    background: #111;
+    color: white;
+    overflow: hidden;
+  }
+  #fondJeu {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100vw; height: 100vh;
+    background-size: cover;
+    background-position: center;
+    filter: brightness(0.5);
+    z-index: -1;
+  }
+  #interface {
+    position: relative;
+    max-width: 480px;
+    margin: 30px auto;
+    background: rgba(20,20,20,0.9);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 15px #0af;
+  }
+  #instructions {
+    font-size: 1.1em;
+    margin-bottom: 20px;
+  }
+  #compteurPoints {
+    font-size: 1.3em;
+    margin-bottom: 15px;
+    text-align: center;
+  }
+  button {
+    font-size: 1.2em;
+    padding: 10px 20px;
+    margin: 10px 5px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    background: #0af;
+    color: white;
+    transition: background 0.3s ease;
+  }
+  button:hover {
+    background: #08c;
+  }
+  #btnCommencer {
+    display: none;
+  }
+  #changerFondBtn, #ouvrirPersonnalisationBtn {
+    position: fixed;
+    bottom: 15px;
+    left: 15px;
+    background: #444;
+    font-size: 1em;
+    padding: 8px 15px;
+    box-shadow: 0 0 10px #0af;
+  }
+  #ouvrirPersonnalisationBtn {
+    left: auto;
+    right: 15px;
+  }
+  /* Fenêtre personnalisation fond */
+  #fenetreFond {
+    display: none;
+    position: fixed;
+    bottom: 70px;
+    right: 15px;
+    background: rgba(0,0,0,0.9);
+    border: 2px solid #0af;
+    border-radius: 8px;
+    padding: 15px;
+    width: 220px;
+    z-index: 20;
+  }
+  #fenetreFond h3 {
+    margin-top: 0;
+    font-size: 1.2em;
+    text-align: center;
+  }
+  .fondOption {
+    cursor: pointer;
+    margin: 8px 0;
+    border-radius: 6px;
+    overflow: hidden;
+    border: 2px solid transparent;
+    transition: border-color 0.3s;
+  }
+  .fondOption:hover, .fondOption.selected {
+    border-color: #0af;
+  }
+  .fondThumb {
+    width: 100%;
+    height: 60px;
+    background-size: cover;
+    background-position: center;
+  }
+  /* Responsive mobile */
+  @media(max-width: 500px) {
+    #interface {
+      margin: 15px 10px;
+      padding: 15px;
+      max-width: 100%;
     }
-
-    body {
-      background: linear-gradient(to bottom right, #1f1f1f, #000);
-      color: white;
-      overflow: hidden;
+    #instructions {
+      font-size: 1.3em;
     }
-
-    .page {
-      display: none;
-      padding: 2rem;
-      text-align: center;
-      height: 100vh;
+    #compteurPoints {
+      font-size: 1.5em;
     }
-
-    .active {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+    button {
+      font-size: 1.4em;
+      padding: 14px 25px;
+      margin: 12px 6px;
     }
-
-    h1 {
-      font-size: 3rem;
-      color: #00ffc8;
+    #changerFondBtn, #ouvrirPersonnalisationBtn {
+      font-size: 1.1em;
+      padding: 10px 18px;
+      bottom: 10px;
     }
-
-    .btn {
-      margin: 1rem;
-      padding: 1rem 2rem;
-      font-size: 1.2rem;
-      background: #00ffc8;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
+    #fenetreFond {
+      width: 90vw;
+      right: 5vw;
+      bottom: 70px;
+      padding: 20px;
     }
-
-    .btn:hover {
-      background: #00ccaa;
+    .fondThumb {
+      height: 80px;
     }
-
-    #gameArea {
-      width: 100%;
-      max-width: 800px;
-      height: 80vh;
-      border: 2px solid #00ffc8;
-      margin: auto;
-      position: relative;
-      background: #111;
-      border-radius: 20px;
-      overflow: hidden;
-    }
-
-    .block {
-      width: 60px;
-      height: 60px;
-      position: absolute;
-      border-radius: 10px;
-      cursor: pointer;
-    }
-
-    .gray { background: gray; }
-    .red { background: #ff4d4d; }
-    .blue { background: #4d94ff; }
-    .green { background: #4dff88; }
-    .yellow { background: #ffff4d; }
-
-    .hud {
-      display: flex;
-      justify-content: space-between;
-      width: 90%;
-      margin: 1rem auto;
-      font-size: 1.2rem;
-    }
-
-    .topbar {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
-    }
-
-    .link-btn {
-      margin-left: 1rem;
-      background: transparent;
-      border: 1px solid #00ffc8;
-      color: #00ffc8;
-      padding: 0.5rem 1rem;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    .store-item {
-      background: #222;
-      padding: 1rem;
-      margin: 1rem;
-      border-radius: 10px;
-      border: 1px solid #444;
-    }
-
-    .store-item h3 {
-      margin-bottom: 0.5rem;
-    }
-
-    .store-item button {
-      background: #00ffc8;
-      border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
-  <!-- ACCUEIL -->
-  <div id="home" class="page active">
-    <h1>Blokz Reflex</h1>
-    <p>🎯 Clique sur les blocs colorés pour gagner des 🏆.</p>
-    <p>❌ Évite les blocs gris. Rater un bloc coloré = -1 ❤️</p>
-    <p>💾 Trophées et améliorations sont sauvegardés automatiquement.</p>
-    <button class="btn" onclick="chooseDifficulty('easy')">Facile</button>
-    <button class="btn" onclick="chooseDifficulty('medium')">Moyen</button>
-    <button class="btn" onclick="chooseDifficulty('impossible')">Impossible</button>
-    <div class="topbar">
-      <button class="link-btn" onclick="showPage('shop')">🏪 Boutique</button>
-      <button class="link-btn" onclick="showPage('profile')">👤 Profil</button>
-    </div>
+
+<div id="fondJeu"></div>
+
+<div id="interface">
+  <div id="instructions">
+    <h2>Blokz Reflex - Instructions</h2>
+    <ul>
+      <li>Clique sur "Prêt ?" pour lancer le compte à rebours.</li>
+      <li>Après le compte à rebours, clique sur "Commencer" pour démarrer la partie.</li>
+      <li>Essaie de cliquer sur les bons blocs avant qu'ils disparaissent !</li>
+      <li>Personnalise ton fond d’écran gratuitement.</li>
+    </ul>
   </div>
 
-  <!-- ÉCRAN "PRÊT ?" -->
-  <div id="ready" class="page">
-    <h1>Tu es prêt ?</h1>
-    <p>Le jeu commence dès que tu appuies sur <strong>Commencer</strong>.</p>
-    <button class="btn" onclick="startGame()">Commencer</button>
-    <button class="btn" onclick="showPage('home')">Retour</button>
+  <div id="compteurPoints">🏆 Trophées : 0</div>
+
+  <div style="text-align: center;">
+    <button id="btnPret">Prêt ?</button>
+    <button id="btnCommencer">Commencer</button>
   </div>
+</div>
 
-  <!-- JEU -->
-  <div id="game" class="page">
-    <div class="hud">
-      <div>❤️ Vies : <span id="lives"></span></div>
-      <div>🏆 Trophées : <span id="trophies"></span></div>
-      <div>🔥 Multiplicateur : x<span id="multiplier"></span></div>
-    </div>
-    <div id="gameArea"></div>
-    <div class="topbar">
-      <button class="link-btn" onclick="endGame()">🏠 Quitter</button>
-    </div>
+<button id="changerFondBtn" style="display:none;">Changer fond perso gratuit</button>
+<button id="ouvrirPersonnalisationBtn">Personnaliser fond d’écran</button>
+
+<div id="fenetreFond">
+  <h3>Choisis ton fond</h3>
+  <div class="fondOption" data-index="0">
+    <div class="fondThumb" style="background-image:url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1350&q=80')"></div>
   </div>
-
-  <!-- BOUTIQUE -->
-  <div id="shop" class="page">
-    <h1>Boutique 🛒</h1>
-    <div class="store-item">
-      <h3>❤️ Vie Supplémentaire — 50 🏆</h3>
-      <button onclick="buyLife()">Acheter</button>
-    </div>
-    <div class="store-item">
-      <h3>🔥 Multiplicateur x<span id="shopMultiplier"></span> → x<span id="nextMultiplier"></span> — <span id="multiplierCost"></span> 🏆</h3>
-      <button onclick="upgradeMultiplier()">Améliorer</button>
-    </div>
-    <button class="btn" onclick="showPage('home')">Retour</button>
+  <div class="fondOption" data-index="1">
+    <div class="fondThumb" style="background-image:url('https://images.unsplash.com/photo-1518837695005-2083093ee35b?auto=format&fit=crop&w=1350&q=80')"></div>
   </div>
-
-  <!-- PROFIL -->
-  <div id="profile" class="page">
-    <h1>Profil 👤</h1>
-    <p>🏆 Trophées : <span id="profileTrophies"></span></p>
-    <p>❤️ Vies : <span id="profileLives"></span></p>
-    <p>🔥 Multiplicateur : x<span id="profileMultiplier"></span></p>
-    <button class="btn" onclick="showPage('home')">Retour</button>
+  <div class="fondOption" data-index="2">
+    <div class="fondThumb" style="background-image:url('https://images.unsplash.com/photo-1500534623283-312aade485b7?auto=format&fit=crop&w=1350&q=80')"></div>
   </div>
+</div>
 
-  <script>
-    const pages = ["home", "ready", "game", "shop", "profile"];
-    const colors = ['red', 'blue', 'green', 'yellow'];
-    const difficulties = { easy: 3000, medium: 1500, impossible: 800 };
-    let gameTimer, currentBlock, selectedDifficulty = "easy";
-    let trophies = parseInt(localStorage.getItem("trophies") || "0");
-    let lives = parseInt(localStorage.getItem("lives") || "3");
-    let multiplier = parseInt(localStorage.getItem("multiplier") || "1");
+<script>
+  let points = 0;
+  let jeuEnCours = false;
+  let tempsBloc = 3000; // facile = 3s par défaut
 
-    function showPage(id) {
-      pages.forEach(p => document.getElementById(p).classList.remove("active"));
-      document.getElementById(id).classList.add("active");
-      if (id === 'profile') updateProfile();
-      if (id === 'shop') updateShop();
+  const fondsPersoGratuits = [
+    'url("https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1350&q=80")',
+    'url("https://images.unsplash.com/photo-1518837695005-2083093ee35b?auto=format&fit=crop&w=1350&q=80")',
+    'url("https://images.unsplash.com/photo-1500534623283-312aade485b7?auto=format&fit=crop&w=1350&q=80")'
+  ];
+  let fondActuelIndex = 0;
+
+  const compteurPoints = document.getElementById('compteurPoints');
+  const btnPret = document.getElementById('btnPret');
+  const btnCommencer = document.getElementById('btnCommencer');
+  const fondJeu = document.getElementById('fondJeu');
+  const ouvrirPersonnalisationBtn = document.getElementById('ouvrirPersonnalisationBtn');
+  const fenetreFond = document.getElementById('fenetreFond');
+  const fondOptions = document.querySelectorAll('.fondOption');
+
+  function majPoints() {
+    compteurPoints.textContent = `🏆 Trophées : ${points}`;
+  }
+
+  function appliquerFond(index) {
+    fondJeu.style.backgroundImage = fondsPersoGratuits[index];
+    fondActuelIndex = index;
+    fondOptions.forEach(el => el.classList.remove('selected'));
+    fondOptions[index].classList.add('selected');
+  }
+
+  async function compteRebours() {
+    btnPret.style.display = 'none';
+    btnCommencer.style.display = 'inline-block';
+
+    for(let i = 3; i > 0; i--) {
+      btnCommencer.textContent = `Commencer dans ${i}...`;
+      await new Promise(r => setTimeout(r, 1000));
     }
+    btnCommencer.textContent = 'Commencer !';
+  }
 
-    function chooseDifficulty(diff) {
-      selectedDifficulty = diff;
-      showPage('ready');
+  function demarrerJeu() {
+    jeuEnCours = true;
+    points = 0;
+    majPoints();
+    btnCommencer.style.display = 'none';
+    alert('Ici démarre ta logique de jeu avec tempsBloc = ' + tempsBloc + ' ms');
+  }
+
+  btnPret.addEventListener('click', compteRebours);
+  btnCommencer.addEventListener('click', demarrerJeu);
+
+  ouvrirPersonnalisationBtn.addEventListener('click', () => {
+    if(fenetreFond.style.display === 'block') {
+      fenetreFond.style.display = 'none';
+    } else {
+      fenetreFond.style.display = 'block';
     }
+  });
 
-    function updateUI() {
-      document.getElementById("lives").textContent = lives;
-      document.getElementById("trophies").textContent = trophies;
-      document.getElementById("multiplier").textContent = multiplier;
-    }
+  fondOptions.forEach(option => {
+    option.addEventListener('click', () => {
+      let index = parseInt(option.getAttribute('data-index'));
+      appliquerFond(index);
+      fenetreFond.style.display = 'none';
+    });
+  });
 
-    function spawnBlock(speed) {
-      const gameArea = document.getElementById("gameArea");
-      gameArea.innerHTML = "";
-      const block = document.createElement("div");
-      const isGray = Math.random() < 0.2;
-      block.className = "block " + (isGray ? "gray" : colors[Math.floor(Math.random() * colors.length)]);
-      block.style.top = Math.random() * (gameArea.clientHeight - 60) + "px";
-      block.style.left = Math.random() * (gameArea.clientWidth - 60) + "px";
+  window.addEventListener('load', () => {
+    majPoints();
+    appliquerFond(fondActuelIndex);
+  });
+</script>
 
-      block.onclick = () => {
-        if (isGray) return endGame("Tu as cliqué un bloc gris !");
-        trophies += multiplier;
-        saveState();
-        updateUI();
-        clearTimeout(gameTimer);
-        spawnBlock(speed);
-      };
-
-      gameArea.appendChild(block);
-      currentBlock = block;
-
-      gameTimer = setTimeout(() => {
-        if (!isGray) {
-          lives--;
-          if (lives <= 0) return endGame("Tu as perdu toutes tes vies !");
-        }
-        updateUI();
-        spawnBlock(speed);
-      }, speed);
-    }
-
-    function startGame() {
-      updateUI();
-      showPage('game');
-      spawnBlock(difficulties[selectedDifficulty]);
-    }
-
-    function endGame(msg) {
-      if (msg) alert("Game Over : " + msg);
-      clearTimeout(gameTimer);
-      saveState();
-      showPage('home');
-    }
-
-    function saveState() {
-      localStorage.setItem("trophies", trophies);
-      localStorage.setItem("lives", lives);
-      localStorage.setItem("multiplier", multiplier);
-    }
-
-    function updateProfile() {
-      document.getElementById("profileTrophies").textContent = trophies;
-      document.getElementById("profileLives").textContent = lives;
-      document.getElementById("profileMultiplier").textContent = multiplier;
-    }
-
-    function updateShop() {
-      const nextMult = multiplier + 1;
-      const cost = nextMult * nextMult * 50;
-      document.getElementById("shopMultiplier").textContent = multiplier;
-      document.getElementById("nextMultiplier").textContent = nextMult;
-      document.getElementById("multiplierCost").textContent = cost;
-    }
-
-    function buyLife() {
-      if (trophies >= 50) {
-        trophies -= 50;
-        lives++;
-        saveState();
-        alert("❤️ +1 vie !");
-      } else alert("Pas assez de trophées !");
-    }
-
-    function upgradeMultiplier() {
-      const nextMult = multiplier + 1;
-      const cost = nextMult * nextMult * 50;
-      if (trophies >= cost) {
-        trophies -= cost;
-        multiplier = nextMult;
-        saveState();
-        alert("🔥 Multiplicateur augmenté !");
-        updateShop();
-      } else alert("Pas assez de trophées !");
-    }
-
-    updateUI();
-  </script>
 </body>
 </html>
+
 
 
 
