--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <title>Blokz Reflex</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', sans-serif; }
@@ -20,6 +21,7 @@
       border: none;
       border-radius: 10px;
       cursor: pointer;
+      user-select: none;
     }
 
     .btn:hover { background: #00ccaa; }
@@ -34,6 +36,7 @@
       background: #111;
       border-radius: 20px;
       overflow: hidden;
+      touch-action: manipulation;
     }
 
     .block {
@@ -42,6 +45,7 @@
       position: absolute;
       border-radius: 10px;
       cursor: pointer;
+      user-select: none;
     }
 
     .gray { background: gray; }
@@ -64,16 +68,26 @@
       position: absolute;
       top: 1rem;
       right: 1rem;
+      display: flex;
+      gap: 0.5rem;
+      flex-wrap: wrap;
+      justify-content: flex-end;
     }
 
     .link-btn {
-      margin-left: 1rem;
       background: transparent;
       border: 1px solid #00ffc8;
       color: #00ffc8;
       padding: 0.5rem 1rem;
       border-radius: 8px;
       cursor: pointer;
+      user-select: none;
+      font-size: 1rem;
+    }
+    .link-btn:hover {
+      background: #00ccaa;
+      color: #000;
+      border-color: #00ccaa;
     }
 
     .store-item {
@@ -82,6 +96,8 @@
       margin: 1rem;
       border-radius: 10px;
       border: 1px solid #444;
+      max-width: 400px;
+      user-select: none;
     }
 
     .store-item h3 { margin-bottom: 0.5rem; }
@@ -92,12 +108,25 @@
       padding: 0.5rem 1rem;
       border-radius: 8px;
       cursor: pointer;
+      user-select: none;
+      font-size: 1rem;
     }
 
     #countdown {
       font-size: 5rem;
       font-weight: bold;
       margin-top: 2rem;
+      user-select: none;
+    }
+
+    /* Ajustements mobiles */
+    @media (max-width: 600px) {
+      h1 { font-size: 2.2rem; }
+      .btn { padding: 0.8rem 1.5rem; font-size: 1rem; }
+      #gameArea { height: 60vh; }
+      .block { width: 50px; height: 50px; }
+      .hud { font-size: 1rem; }
+      .topbar { top: 0.5rem; right: 0.5rem; }
     }
   </style>
 </head>
@@ -111,7 +140,7 @@
     <button class="btn" onclick="chooseDifficulty('easy')">Facile</button>
     <button class="btn" onclick="chooseDifficulty('medium')">Moyen</button>
     <button class="btn" onclick="chooseDifficulty('impossible')">Impossible</button>
-    <button class="btn" onclick="showPage('localGame')">Mode Local</button>
+    <button class="btn" onclick="goToLocal()">Local</button>
     <div class="topbar">
       <button class="link-btn" onclick="showPage('shop')">🏪 Boutique</button>
       <button class="link-btn" onclick="showPage('profile')">👤 Profil</button>
@@ -165,14 +194,14 @@
   </div>
 
   <!-- MODE LOCAL -->
-  <div id="localGame" class="page">
-    <h1>Mode Multijoueur Local</h1>
-    <p>Partage ton écran avec un ami pour jouer ensemble !</p>
+  <div id="local" class="page">
+    <h1>Mode Local</h1>
+    <p>Mode multijoueur local à venir !</p>
     <button class="btn" onclick="showPage('home')">Retour</button>
   </div>
 
   <script>
-    const pages = ["home", "ready", "game", "shop", "profile", "localGame"];
+    const pages = ["home", "ready", "game", "shop", "profile", "local"];
     const colors = ['red', 'blue', 'green', 'yellow'];
     const difficulties = { easy: 3000, medium: 1500, impossible: 800 };
     let gameTimer, currentBlock, selectedDifficulty = "easy";
@@ -186,6 +215,7 @@
       document.getElementById(id).classList.add("active");
       if (id === 'profile') updateProfile();
       if (id === 'shop') updateShop();
+      if (id === 'game') updateHUD();
     }
 
     function chooseDifficulty(diff) {
@@ -193,90 +223,127 @@
       showPage('ready');
     }
 
-    function updateUI() {
-      document.getElementById("lives").textContent = lives;
-      document.getElementById("trophies").textContent = trophies;
-      document.getElementById("multiplier").textContent = multiplier;
-      document.getElementById("score").textContent = score;
-    }
-
-    function spawnBlock(speed) {
-      const gameArea = document.getElementById("gameArea");
-      gameArea.innerHTML = "";
-      const block = document.createElement("div");
-      const isGray = Math.random() < 0.2;
-      block.className = "block " + (isGray ? "gray" : colors[Math.floor(Math.random() * colors.length)]);
-      block.style.top = Math.random() * (gameArea.clientHeight - 60) + "px";
-      block.style.left = Math.random() * (gameArea.clientWidth - 60) + "px";
-
-      block.onclick = () => {
-        if (isGray) return endGame("Tu as cliqué sur un bloc gris, partie terminée !");
-        score += multiplier;
-        trophies++;
-        updateUI();
-        clearTimeout(gameTimer);
-        gameTimer = setTimeout(() => spawnBlock(speed), speed);
-      };
-
-      gameArea.appendChild(block);
-
-      gameTimer = setTimeout(() => {
-        if (!block.parentNode) return; // déjà cliqué
-        if (!isGray) {
-          lives--;
-          updateUI();
-          if (lives <= 0) return endGame("Tu as perdu toutes tes vies !");
-        }
-        spawnBlock(speed);
-      }, speed);
-    }
-
     function startGame() {
       score = 0;
-      updateUI();
+      updateHUD();
       showPage('game');
-      let count = 3;
-      const countdown = document.getElementById("countdown");
-      countdown.textContent = count;
+      countdown(3, () => {
+        spawnBlock();
+      });
+    }
+
+    function countdown(seconds, callback) {
+      const countdownEl = document.getElementById('countdown');
+      countdownEl.textContent = seconds;
+      let current = seconds;
       const interval = setInterval(() => {
-        count--;
-        if (count > 0) countdown.textContent = count;
-        else {
+        current--;
+        if (current > 0) {
+          countdownEl.textContent = current;
+        } else {
           clearInterval(interval);
-          countdown.textContent = "";
-          spawnBlock(difficulties[selectedDifficulty]);
+          countdownEl.textContent = "";
+          callback();
         }
       }, 1000);
     }
 
-    function endGame(message) {
-      alert(message + `\nScore final : ${score}\nTrophées gagnés : ${trophies}`);
-      // Sauvegarde les trophées, vies et multiplicateur
-      localStorage.setItem("trophies", trophies);
-      localStorage.setItem("lives", lives);
-      localStorage.setItem("multiplier", multiplier);
+    function spawnBlock() {
+      if (lives <= 0) {
+        endGame();
+        return;
+      }
+      const gameArea = document.getElementById('gameArea');
+      gameArea.innerHTML = "";
+      const block = document.createElement('div');
+      block.classList.add('block');
+
+      // Choix couleur, 15% de gris (bloc piège)
+      const isGray = Math.random() < 0.15;
+      if (isGray) {
+        block.classList.add('gray');
+        block.dataset.special = "trap";
+      } else {
+        const color = colors[Math.floor(Math.random() * colors.length)];
+        block.classList.add(color);
+        block.dataset.color = color;
+      }
+
+      // Position aléatoire dans gameArea
+      const maxX = gameArea.clientWidth - 60;
+      const maxY = gameArea.clientHeight - 60;
+      block.style.left = Math.random() * maxX + 'px';
+      block.style.top = Math.random() * maxY + 'px';
+
+      // Gestion clic
+      block.addEventListener('click', () => {
+        if (block.classList.contains('gray')) {
+          // Perte immédiate
+          alert("Tu as cliqué sur un bloc gris ! Partie terminée.");
+          lives = 0;
+          saveData();
+          endGame();
+          return;
+        } else {
+          // Bloc coloré cliqué : + trophées
+          score++;
+          trophies += multiplier;
+          updateHUD();
+          saveData();
+          // On passe au bloc suivant directement
+          clearTimeout(gameTimer);
+          spawnBlock();
+        }
+      });
+
+      gameArea.appendChild(block);
+
+      // Timer disparition bloc
+      gameTimer = setTimeout(() => {
+        // Si bloc coloré non cliqué = perte d'une vie
+        if (!block.classList.contains('gray')) {
+          lives--;
+          updateHUD();
+          saveData();
+          if (lives <= 0) {
+            endGame();
+            return;
+          }
+        }
+        spawnBlock();
+      }, difficulties[selectedDifficulty]);
+    }
+
+    function updateHUD() {
+      document.getElementById('lives').textContent = lives;
+      document.getElementById('trophies').textContent = trophies;
+      document.getElementById('multiplier').textContent = multiplier;
+      document.getElementById('score').textContent = score;
+    }
+
+    function endGame() {
+      clearTimeout(gameTimer);
+      alert(`Partie terminée !\nScore final : ${score}\nTrophées gagnés : ${score * multiplier}`);
+      // Ajout des trophées obtenus en fin de partie
+      trophies += score * multiplier;
+      saveData();
       showPage('home');
     }
 
-    function updateProfile() {
-      document.getElementById("profileTrophies").textContent = trophies;
-      document.getElementById("profileLives").textContent = lives;
-      document.getElementById("profileMultiplier").textContent = multiplier;
-    }
-
+    // BOUTIQUE
     function updateShop() {
-      document.getElementById("shopMultiplier").textContent = multiplier;
-      document.getElementById("nextMultiplier").textContent = multiplier + 1;
-      document.getElementById("multiplierCost").textContent = multiplier * 100;
+      document.getElementById('shopMultiplier').textContent = multiplier;
+      document.getElementById('nextMultiplier').textContent = multiplier + 1;
+      document.getElementById('multiplierCost').textContent = multiplier * 100;
     }
 
     function buyLife() {
       if (trophies >= 50) {
         trophies -= 50;
         lives++;
-        updateUI();
+        saveData();
         updateShop();
-        alert("Vie achetée !");
+        alert("Vie supplémentaire achetée !");
       } else {
         alert("Pas assez de trophées !");
       }
@@ -287,12 +354,37 @@
       if (trophies >= cost) {
         trophies -= cost;
         multiplier++;
-        updateUI();
+        saveData();
         updateShop();
         alert("Multiplicateur amélioré !");
       } else {
         alert("Pas assez de trophées !");
       }
+    }
+
+    function updateProfile() {
+      document.getElementById('profileTrophies').textContent = trophies;
+      document.getElementById('profileLives').textContent = lives;
+      document.getElementById('profileMultiplier').textContent = multiplier;
+    }
+
+    function saveData() {
+      localStorage.setItem("trophies", trophies);
+      localStorage.setItem("lives", lives);
+      localStorage.setItem("multiplier", multiplier);
+    }
+
+    // Mode local bouton
+    function goToLocal() {
+      showPage('local');
+    }
+
+    // Au chargement, on s'assure que les données sont bonnes
+    window.onload = () => {
+      if (isNaN(lives) || lives < 1) lives = 3;
+      if (isNaN(trophies) || trophies < 0) trophies = 0;
+      if (isNaN(multiplier) || multiplier < 1) multiplier = 1;
+      saveData();
     }
   </script>
 </body>
