--- a/index.html
+++ b/index.html
@@ -1,78 +1,207 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <title>Blokz Reflex</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #111; color: #fff; }
-    .page { display: none; padding: 20px; }
-    .active { display: block; }
-    #gameArea { position: relative; width: 100%; height: 80vh; background: #222; overflow: hidden; }
-    .block {
-      width: 60px; height: 60px; position: absolute; border-radius: 10px;
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', sans-serif; }
+    body { background: linear-gradient(to bottom right, #1f1f1f, #000); color: white; overflow: hidden; }
+
+    .page { display: none; padding: 2rem; text-align: center; height: 100vh; }
+    .active { display: flex; flex-direction: column; justify-content: center; align-items: center; }
+
+    h1 { font-size: 3rem; color: #00ffc8; }
+
+    .btn {
+      margin: 1rem;
+      padding: 1rem 2rem;
+      font-size: 1.2rem;
+      background: #00ffc8;
+      border: none;
+      border-radius: 10px;
       cursor: pointer;
+      user-select: none;
     }
-    .red { background: red; }
-    .blue { background: blue; }
-    .green { background: green; }
-    .yellow { background: yellow; }
+
+    .btn:hover { background: #00ccaa; }
+
+    #gameArea {
+      width: 100%;
+      max-width: 800px;
+      height: 80vh;
+      border: 2px solid #00ffc8;
+      margin: auto;
+      position: relative;
+      background: #111;
+      border-radius: 20px;
+      overflow: hidden;
+      touch-action: manipulation;
+    }
+
+    .block {
+      width: 60px;
+      height: 60px;
+      position: absolute;
+      border-radius: 10px;
+      cursor: pointer;
+      user-select: none;
+    }
+
     .gray { background: gray; }
-    .hud { margin: 10px 0; }
-    button { padding: 10px 20px; margin: 5px; }
+    .red { background: #ff4d4d; }
+    .blue { background: #4d94ff; }
+    .green { background: #4dff88; }
+    .yellow { background: #ffff4d; }
+
+    .hud {
+      display: flex;
+      justify-content: space-between;
+      width: 90%;
+      margin: 1rem auto;
+      font-size: 1.2rem;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+
+    .topbar {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      display: flex;
+      gap: 0.5rem;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+    }
+
+    .link-btn {
+      background: transparent;
+      border: 1px solid #00ffc8;
+      color: #00ffc8;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+      user-select: none;
+      font-size: 1rem;
+    }
+    .link-btn:hover {
+      background: #00ccaa;
+      color: #000;
+      border-color: #00ccaa;
+    }
+
+    .store-item {
+      background: #222;
+      padding: 1rem;
+      margin: 1rem;
+      border-radius: 10px;
+      border: 1px solid #444;
+      max-width: 400px;
+      user-select: none;
+    }
+
+    .store-item h3 { margin-bottom: 0.5rem; }
+
+    .store-item button {
+      background: #00ffc8;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+      user-select: none;
+      font-size: 1rem;
+    }
+
+    #countdown {
+      font-size: 5rem;
+      font-weight: bold;
+      margin-top: 2rem;
+      user-select: none;
+    }
+
+    /* Ajustements mobiles */
+    @media (max-width: 600px) {
+      h1 { font-size: 2.2rem; }
+      .btn { padding: 0.8rem 1.5rem; font-size: 1rem; }
+      #gameArea { height: 60vh; }
+      .block { width: 50px; height: 50px; }
+      .hud { font-size: 1rem; }
+      .topbar { top: 0.5rem; right: 0.5rem; }
+    }
   </style>
 </head>
 <body>
-
+  <!-- ACCUEIL -->
   <div id="home" class="page active">
     <h1>Blokz Reflex</h1>
-    <p>Choisis une difficulté :</p>
-    <button onclick="chooseDifficulty('easy')">Facile</button>
-    <button onclick="chooseDifficulty('medium')">Moyen</button>
-    <button onclick="chooseDifficulty('impossible')">Impossible</button>
-    <br><br>
-    <button onclick="showPage('shop')">🏪 Boutique</button>
-    <button onclick="showPage('profile')">👤 Profil</button>
+    <p>🎯 Clique sur les blocs colorés pour gagner des 🏆.</p>
+    <p>❌ Évite les blocs gris. Rater un bloc coloré = -1 ❤️</p>
+    <p>💾 Trophées et améliorations sont sauvegardés automatiquement.</p>
+    <button class="btn" onclick="chooseDifficulty('easy')">Facile</button>
+    <button class="btn" onclick="chooseDifficulty('medium')">Moyen</button>
+    <button class="btn" onclick="chooseDifficulty('impossible')">Impossible</button>
+    <button class="btn" onclick="goToLocal()">Local</button>
+    <div class="topbar">
+      <button class="link-btn" onclick="showPage('shop')">🏪 Boutique</button>
+      <button class="link-btn" onclick="showPage('profile')">👤 Profil</button>
+    </div>
   </div>
 
+  <!-- ÉCRAN PRÊT -->
   <div id="ready" class="page">
-    <h2>Prêt ?</h2>
-    <button onclick="startGame()">Commencer</button>
+    <h1>Tu es prêt ?</h1>
+    <p>Le jeu commence dès que tu appuies sur <strong>Commencer</strong>.</p>
+    <button class="btn" onclick="startGame()">Commencer</button>
+    <button class="btn" onclick="showPage('home')">Retour</button>
   </div>
 
+  <!-- JEU -->
   <div id="game" class="page">
     <div class="hud">
-      Vies : <span id="lives">3</span> |
-      Trophées : <span id="trophies">0</span> |
-      Multiplicateur : <span id="multiplier">1</span> |
-      Score : <span id="score">0</span>
+      <div>❤️ Vies : <span id="lives"></span></div>
+      <div>🏆 Trophées : <span id="trophies"></span></div>
+      <div>🔥 Multiplicateur : x<span id="multiplier"></span></div>
+      <div>📈 Score : <span id="score"></span></div>
     </div>
-    <div id="countdown" style="font-size: 3em; text-align: center;"></div>
+    <div id="countdown"></div>
     <div id="gameArea"></div>
+    <div class="topbar">
+      <button class="link-btn" onclick="endGame()">🏠 Quitter</button>
+    </div>
   </div>
 
+  <!-- BOUTIQUE -->
   <div id="shop" class="page">
-    <h2>Boutique</h2>
-    <p>Multiplicateur actuel : x<span id="shopMultiplier">1</span></p>
-    <p>Améliorer vers x<span id="nextMultiplier">2</span> pour <span id="multiplierCost">100</span> trophées</p>
-    <button onclick="upgradeMultiplier()">💪 Améliorer</button>
-    <p>Ajouter 1 vie pour 50 trophées</p>
-    <button onclick="buyLife()">❤️ Acheter une vie</button>
-    <br><br>
-    <button onclick="showPage('home')">🏠 Retour</button>
+    <h1>Boutique 🛒</h1>
+    <div class="store-item">
+      <h3>❤️ Vie Supplémentaire — 50 🏆</h3>
+      <button onclick="buyLife()">Acheter</button>
+    </div>
+    <div class="store-item">
+      <h3>🔥 Multiplicateur x<span id="shopMultiplier"></span> → x<span id="nextMultiplier"></span> — <span id="multiplierCost"></span> 🏆</h3>
+      <button onclick="upgradeMultiplier()">Améliorer</button>
+    </div>
+    <button class="btn" onclick="showPage('home')">Retour</button>
   </div>
 
+  <!-- PROFIL -->
   <div id="profile" class="page">
-    <h2>Profil</h2>
-    <p>Trophées : <span id="profileTrophies">0</span></p>
-    <p>Vies : <span id="profileLives">3</span></p>
-    <p>Multiplicateur : <span id="profileMultiplier">1</span></p>
-    <br>
-    <button onclick="showPage('home')">🏠 Retour</button>
+    <h1>Profil 👤</h1>
+    <p>🏆 Trophées : <span id="profileTrophies"></span></p>
+    <p>❤️ Vies : <span id="profileLives"></span></p>
+    <p>🔥 Multiplicateur : x<span id="profileMultiplier"></span></p>
+    <button class="btn" onclick="showPage('home')">Retour</button>
+  </div>
+
+  <!-- MODE LOCAL -->
+  <div id="local" class="page">
+    <h1>Mode Local</h1>
+    <p>Mode multijoueur local à venir !</p>
+    <button class="btn" onclick="showPage('home')">Retour</button>
   </div>
 
   <script>
-    const pages = ["home", "ready", "game", "shop", "profile"];
+    const pages = ["home", "ready", "game", "shop", "profile", "local"];
     const colors = ['red', 'blue', 'green', 'yellow'];
     const difficulties = { easy: 3000, medium: 1500, impossible: 800 };
     let gameTimer, currentBlock, selectedDifficulty = "easy";
@@ -95,11 +224,6 @@
     }
 
     function startGame() {
-      if (lives <= 0) {
-        alert("Tu n'avais plus de vie, on t'en redonne 3 !");
-        lives = 3;
-        saveData();
-      }
       score = 0;
       updateHUD();
       showPage('game');
@@ -134,6 +258,7 @@
       const block = document.createElement('div');
       block.classList.add('block');
 
+      // Choix couleur, 15% de gris (bloc piège)
       const isGray = Math.random() < 0.15;
       if (isGray) {
         block.classList.add('gray');
@@ -144,23 +269,28 @@
         block.dataset.color = color;
       }
 
+      // Position aléatoire dans gameArea
       const maxX = gameArea.clientWidth - 60;
       const maxY = gameArea.clientHeight - 60;
       block.style.left = Math.random() * maxX + 'px';
       block.style.top = Math.random() * maxY + 'px';
 
+      // Gestion clic
       block.addEventListener('click', () => {
         if (block.classList.contains('gray')) {
+          // Perte immédiate
           alert("Tu as cliqué sur un bloc gris ! Partie terminée.");
           lives = 0;
           saveData();
           endGame();
           return;
         } else {
+          // Bloc coloré cliqué : + trophées
           score++;
           trophies += multiplier;
           updateHUD();
           saveData();
+          // On passe au bloc suivant directement
           clearTimeout(gameTimer);
           spawnBlock();
         }
@@ -168,7 +298,9 @@
 
       gameArea.appendChild(block);
 
+      // Timer disparition bloc
       gameTimer = setTimeout(() => {
+        // Si bloc coloré non cliqué = perte d'une vie
         if (!block.classList.contains('gray')) {
           lives--;
           updateHUD();
@@ -192,11 +324,13 @@
     function endGame() {
       clearTimeout(gameTimer);
       alert(`Partie terminée !\nScore final : ${score}\nTrophées gagnés : ${score * multiplier}`);
+      // Ajout des trophées obtenus en fin de partie
       trophies += score * multiplier;
       saveData();
       showPage('home');
     }
 
+    // BOUTIQUE
     function updateShop() {
       document.getElementById('shopMultiplier').textContent = multiplier;
       document.getElementById('nextMultiplier').textContent = multiplier + 1;
@@ -240,6 +374,12 @@
       localStorage.setItem("multiplier", multiplier);
     }
 
+    // Mode local bouton
+    function goToLocal() {
+      showPage('local');
+    }
+
+    // Au chargement, on s'assure que les données sont bonnes
     window.onload = () => {
       if (isNaN(lives) || lives < 1) lives = 3;
       if (isNaN(trophies) || trophies < 0) trophies = 0;
@@ -247,10 +387,8 @@
       saveData();
     }
   </script>
-
 </body>
 </html>
-
 
 
 
